<resources>
    <string name="app_name">OQueTemSP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore">Explorar</string>
    <string name="categories">Categorias</string>
    <string name="see_more">Ver Mais</string>
    <string name="see_all">Ver Todas</string>
    <string name="top_categories">Top Categorias</string>
    <string name="interesting_point">Ponto de Interesse</string>
    <string name="information">Informações</string>
    <string name="ibirapuera_desc">O Parque Ibirapuera é um parque urbano na cidade de São Paulo, Brasil. Em 2017, foi o parque mais visitado da América Latina, com aproximadamente 14 milhões de visitas, além de ser um dos locais mais fotografados do mundo.</string>
    <string name="see_complete_description">Veja a descrição completa</string>
    <string name="website">Website</string>
    <string name="email">Email</string>
    <string name="directions">Direções</string>
    <string name="phone">Telefone</string>
    <string name="abre">Abre:</string>
    <string name="fecha">Fecha:</string>
    <string name="title_activity_maps_detail">Localização</string>
</resources>
