<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ExplorarFragment">

        <TextView
            android:id="@+id/txtExplorar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/worksansbold"
            android:text="@string/explore"
            android:textColor="@color/colorDarkerGrey"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerExplorar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtExplorar"
            tools:listitem="@layout/explorar_itens" />

        <TextView
            android:id="@+id/txtCategorias"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/worksansbold"
            android:text="@string/top_categories"
            android:textColor="@color/colorDarkerGrey"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerExplorar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerCategories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/txtCategorias"
            tools:listitem="@layout/explore_categories_itens" />

        <TextView
            android:id="@+id/txtSeeMoreExplore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/see_more"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/worksansmedium"
            app:layout_constraintBottom_toBottomOf="@+id/txtExplorar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtExplorar" />

        <TextView
            android:id="@+id/txtSeeMoreCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/see_all"
            android:clickable="true"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/worksansmedium"
            app:layout_constraintBottom_toBottomOf="@+id/txtCategorias"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtCategorias" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>