<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ToolbarTheme">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:statusBarScrim="@android:color/transparent">

            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription=""
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ibira"
                app:layout_collapseMode="parallax" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorTransparent"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/worksansbold"
                android:theme="@style/ToolbarTheme"
                app:layout_collapseMode="pin" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.InterestingPointDetailActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/worksansbold"
                android:text="Parque Ibirapuera"
                android:textColor="@color/colorDarkerGrey"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtInformation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/worksanssemibold"
                android:text="@string/information"
                android:textColor="@color/colorDarkerGrey"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtTitle" />

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/ibirapuera_desc"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtInformation" />

            <TextView
                android:id="@+id/txtSeeMoreDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/see_complete_description"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDescription" />

            <ImageView
                android:id="@+id/imgPhone"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/drawable_circle_background"
                android:padding="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imgDirections"
                app:layout_constraintTop_toBottomOf="@+id/txtSeeMoreDescription"
                app:srcCompat="@drawable/phone" />

            <ImageView
                android:id="@+id/imgWebsite"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/drawable_circle_background"
                android:padding="12dp"
                app:layout_constraintEnd_toStartOf="@+id/imgEmail"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtSeeMoreDescription"
                app:srcCompat="@drawable/laptop" />

            <ImageView
                android:id="@+id/imgEmail"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/drawable_circle_background"
                android:padding="12dp"
                app:layout_constraintEnd_toStartOf="@+id/imgDirections"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imgWebsite"
                app:layout_constraintTop_toBottomOf="@+id/txtSeeMoreDescription"
                app:srcCompat="@drawable/email" />

            <ImageView
                android:id="@+id/imgDirections"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/drawable_circle_background"
                android:padding="12dp"
                app:layout_constraintEnd_toStartOf="@+id/imgPhone"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imgEmail"
                app:layout_constraintTop_toBottomOf="@+id/txtSeeMoreDescription"
                app:srcCompat="@drawable/directions" />

            <TextView
                android:id="@+id/txtWebSite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/website"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="@+id/imgWebsite"
                app:layout_constraintStart_toStartOf="@+id/imgWebsite"
                app:layout_constraintTop_toBottomOf="@+id/imgWebsite" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/email"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="@+id/imgEmail"
                app:layout_constraintStart_toStartOf="@+id/imgEmail"
                app:layout_constraintTop_toBottomOf="@+id/imgEmail" />

            <TextView
                android:id="@+id/txtDirections"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/directions"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="@+id/imgDirections"
                app:layout_constraintStart_toStartOf="@+id/imgDirections"
                app:layout_constraintTop_toBottomOf="@+id/imgDirections" />

            <TextView
                android:id="@+id/txtPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/phone"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="@+id/imgPhone"
                app:layout_constraintStart_toStartOf="@+id/imgPhone"
                app:layout_constraintTop_toBottomOf="@+id/imgPhone" />

            <ImageView
                android:id="@+id/imgTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="@+id/txtWebSite"
                app:layout_constraintTop_toBottomOf="@+id/txtWebSite"
                app:srcCompat="@drawable/clock" />

            <TextView
                android:id="@+id/txtTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:text="08:00 - 17:00"
                app:layout_constraintBottom_toBottomOf="@+id/imgTime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgTime"
                app:layout_constraintTop_toTopOf="@+id/imgTime" />

            <ImageView
                android:id="@+id/imgPhoneAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/txtWebSite"
                app:layout_constraintTop_toBottomOf="@+id/imgTime"
                app:srcCompat="@drawable/map_marker" />

            <TextView
                android:id="@+id/txtAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="Avenida Pedro Alvares Cabral, s/n - Moema, São Paulo - SP"
                app:layout_constraintBottom_toBottomOf="@+id/imgPhoneAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgPhoneAddress"
                app:layout_constraintTop_toTopOf="@+id/imgPhoneAddress" />

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtAddress" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>